fixed social links alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,7 +32,7 @@
     padding: $spacing-unit 0;
     text-align: center;
 
-    a {
+    a:not(:first-child) {
       padding-left: $spacing-unit;
     }
 }
